# github-analytics

./: .gitignore  LICENSE  README.md  pyproject.toml  report.md
.github/workflows/: tests.yml
github_analytics/: __init__.py  __main__.py  analyzer.py  cli.py  github_api.py  reporter.py  visualizer.py
tests/: test_analyzer.py  test_github_api.py  test_visualizer.py
